--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,55 @@
 :root {
   --button-main-color: rgb(153, 0, 76);
-  --button-dark-theme-color: white;
+  --link-hover-color: rgb(66, 107, 82);
+  --heading-color: rgb(218, 70, 117);
+  --subheading-color: rgb(232, 104, 0);
+  --body-background-color: rgb(218, 242, 222);
 }
 
 body {
-  background: rgb(218, 242, 222);
+  font-family: "PT Mono", monospace;
+  background: var(--body-background-color);
   text-align: center;
 }
 
-container {
+.container {
   margin: 15px auto;
+  background: white;
+  max-width: 710px;
+  padding: 20px;
+  border-radius: 10px;
 }
 
-.dark-theme-button {
+h1 {
+  color: var(--heading-color);
+}
+
+h2,
+h3 {
+  color: var(--subheading-color);
+}
+
+h1,
+h2,
+h3 {
+  font-weight: 800;
+}
+
+p {
+  line-height: 2;
+}
+
+.theme-button {
+  font-family: "PT Mono", monospace;
   padding: 10px 15px;
   border-radius: 8px;
-  background-color: rgb(153, 0, 76);
+  background-color: var(--button-main-color);
   color: white;
   transition: all 150ms ease-in-out;
 }
 
-.dark-theme-button:hover {
-  background-color: var(--button-dark-theme-color);
+.theme-button:hover {
+  background-color: white;
   color: var(--button-main-color);
   border: white;
 }
@@ -32,20 +60,73 @@ img {
 
 .intro-photo {
   transition: all 0.5 150ms ease-in-out;
-  width: 600px;
+  width: 700px;
+  margin-bottom: 18px;
 }
 
 .intro-photo:hover {
   opacity: 0.9;
-  transform: scale(2);
+  transform: scale(1.3);
 }
 
 .image-gallery {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 20px;
+  margin-bottom: 20px;
 }
 
 .image-gallery img {
   width: 100%;
+  transition: all 150ms ease-in-out;
+}
+
+.image-gallery img:hover {
+  transform: scale(2.7);
+  opacity: 0.9;
+}
+
+a {
+  text-decoration: none;
+  color: var(--button-main-color);
+}
+a:hover {
+  color: var(--link-hover-color);
+}
+
+footer {
+  margin: 20px;
+}
+
+.photo-credit {
+  margin-top: 10px;
+  font-size: 13px;
+}
+
+.dark {
+  background-color: rgb(66, 0, 32);
+  color: white;
+}
+
+.dark .container {
+  background-color: rgb(91, 11, 50);
+}
+
+.dark a {
+  color: rgb(97, 123, 102);
+}
+
+.dark a:hover {
+  color: var(--button-main-color);
+}
+
+.dark button {
+  background-color: white;
+  color: var(--button-main-color);
+  transition: all 150ms ease-in-out;
+}
+
+.dark button:hover {
+  background-color: var(--button-main-color);
+  color: white;
 }
